--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,9 +3,17 @@
 
 :root {
     --primary: #fe2c55;
+    --primary-hover: #FE2C55;
+    --black: #000;
+    --default-layout-header-height: 60px;
+    --default-layout-width: 1150px;
+    --text-color: #333;
+    --white: #fff;
 }
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -18,4 +26,17 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+    color: var(--text-color);
+}
+
+button,
+input,
+[tabindex] {
+    outline: none;
+    border: none;
+}
+
+a[hef] {
+    color: var(--text-color);
+    text-decoration: none;
 }
