--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -90,3 +90,9 @@
     color: rgba(22, 24, 35, 0.5);
     padding: 5px 12px;
 }
+
+.moreBTN {
+    font-size: 2rem;
+    margin-left: 28px;
+    background-color: transparent;
+}
