--- a/src/components/Layouts/components/Button/Button.module.scss
+++ b/src/components/Layouts/components/Button/Button.module.scss
@@ -5,13 +5,73 @@
     height: 36px;
     border-radius: 4px;
     cursor: pointer;
+    background-color: var(--white);
+    border: 1px solid transparent;
+    user-select: none;
+
+    +.wrapper {
+        margin-left: 8px;
+    }
+
+    &.disabled {
+        pointer-events: none;
+        opacity: 0.5;
+    }
+}
+
+.rounded {
+    border-radius: 999px;
+    box-shadow: 0 2px 8px rgb(0 0 0 /6%);
+    border-color: rgba(22, 24, 35, 0.12);
+
+    & :hover {
+        border-color: rgba(22, 24, 35, 0.2);
+        background-color: rgba(22, 24, 35, 0.03);
+    }
 }
 
 .primary {
     background-color: var(--primary);
+    border-color: var(--primary);
     color: var(--white);
 
     &:hover {
+        border-color: var(--primary);
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.06), rgba(0, 0, 0, 0.06)), var(--primary-hover);
     }
+}
+
+.outline {
+    border-color: var(--primary);
+    color: var(--primary);
+
+    &:hover {
+        border-color: var(--primary);
+        background-color: rgba(254, 44, 85, 0.06);
+    }
+}
+
+.text {
+    & :hover {
+        text-decoration: underline;
+    }
+}
+
+.small {
+    min-width: 88px;
+    padding: 4px 16px;
+}
+
+.large {
+    padding: 14px 16px;
+    min-width: 150px;
+}
+
+.textColor {
+    color: rgba(22, 24, 35, 0.2);
+}
+
+.icon+.title,
+.title+.icon {
+    margin-left: 8px;
 }
