--- a/src/components/Layouts/components/Button/Button.module.scss
+++ b/src/components/Layouts/components/Button/Button.module.scss
@@ -8,6 +8,11 @@
     background-color: var(--white);
     border: 1px solid transparent;
     user-select: none;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--text-color);
+    text-decoration: none;
 
     +.wrapper {
         margin-left: 8px;
