--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -8,6 +8,7 @@
 }
 
 .inner {
+    padding: 0 var(--default-layout-horizontal-spacer);
     height: 100%;
     width: 1150px;
     display: flex;
@@ -30,7 +31,6 @@
     position: relative;
     border: 1.5px solid transparent;
 
-
     input {
         flex: 1;
         height: 100%;
@@ -45,7 +45,7 @@
     }
 
     &::after {
-        content: "";
+        content: '';
         position: absolute;
         height: 28px;
         width: 1px;
@@ -61,9 +61,8 @@
     .searchLoading {
         font-size: 1.6rem;
         padding-right: 10px;
-        color: rgba(22, 24, 35, 0.34, );
+        color: rgba(22, 24, 35, 0.34);
     }
-
 
     .searchButton {
         width: 52px;
@@ -93,6 +92,7 @@
 
 .moreBTN {
     font-size: 2rem;
+    cursor: pointer;
     margin-left: 28px;
     background-color: transparent;
 }
