--- a/src/components/Layouts/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Layouts/components/Popper/Menu/Menu.module.scss
@@ -3,6 +3,23 @@
     padding: 4px 8px;
 }
 
-.menuItem {
-    margin: 0px;
+// headerMenu
+.header {
+    position: relative;
+    height: 50px;
+    margin-top: -8px;
+}
+
+.backBtn {
+    width: 50px;
+    height: 100%;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
