--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,10 +3,11 @@
 
 :root {
     --primary: #fe2c55;
-    --primary-hover: #FE2C55;
+    --primary-hover: #fe2c55;
     --black: #000;
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --default-layout-horizontal-spacer: 24px;
     --text-color: #333;
     --white: #fff;
 }
@@ -19,6 +20,10 @@
 
 html {
     font-size: 62.5%;
+}
+
+body * {
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
