--- a/src/components/Layouts/components/Button/Button.module.scss
+++ b/src/components/Layouts/components/Button/Button.module.scss
@@ -76,7 +76,31 @@
     color: rgba(22, 24, 35, 0.2);
 }
 
+.menu {
+    justify-content: left;
+    border-radius: 0;
+    font-weight: 400;
+    height: 44px;
+    line-height: 1.8rem;
+    padding-left: 8px;
+
+    &:hover {
+        background-color: rgba(22, 24, 35, 0.03);
+    }
+
+    +.menu {
+        margin-left: 0px;
+        padding-left: 8px;
+    }
+}
+
 .icon+.title,
 .title+.icon {
     margin-left: 8px;
+}
+
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
 }
